<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">도담도담</string>

    <string name="title_point_list">상벌점 기준</string>
    <string name="title_bus_apply">귀가 버스 신청</string>
    <string name="title_song">기상송</string>
    <string name="title_location_apply">랩실 신청</string>
    <string name="title_offbase">외출 / 외박</string>
    <string name="title_offbase_apply_leave">외박 신청</string>
    <string name="title_offbase_apply_pass">외출 신청</string>
    <string name="title_offbase_detail">상세 정보</string>
    <string name="title_lostfound">분실물</string>
    <string name="title_lostfound_writing">글쓰기</string>
    <string name="title_lostfound_update">글수정</string>
    <string name="title_counsel">상담</string>
    <string name="title_counsel_apply">상담 신청</string>
    <string name="title_settings">설정</string>
    <string name="title_my_info">내정보</string>
    <string name="title_my_info_change">프로필 변경</string>
    <string name="title_password_change">비밀번호 변경</string>

    <!-- TODO 개정일 -->
    <string name="subtitle_point_list" translatable="false">2019.3.</string>

    <string name="shortcut_bus_apply">버스 신청</string>

    <string name="show_only_allowed">승인된 항목만 보기</string>

    <string name="text_login">로그인</string>
    <string name="text_meal_empty">급식이 없습니다</string>
    <string name="text_song_video_title">제목</string>
    <string name="text_song_search">검색</string>
    <string name="text_offbase_leave_date">외박날짜</string>
    <string name="text_offbase_leave_date_end">복귀날짜</string>
    <string name="text_offbase_leave_time">외박시간</string>
    <string name="text_offbase_pass_date">외출날짜</string>
    <string name="text_offbase_pass_time">외출시간</string>
    <string name="text_offbase_time_end">복귀시간</string>
    <string name="text_offbase_reason">사유</string>
    <string name="text_offbase_check_message">현재 시간 이후로 체크할 수 있습니다</string>
    <string name="text_offbase_error_message">잘못 기제 되었습니다</string>
    <string name="text_hour">시</string>
    <string name="text_minute">분</string>
    <string name="text_apply">신청</string>
    <string name="text_offbase_leave">외박</string>
    <string name="text_offbase_pass">외출</string>
    <string name="text_refresh">새로고침</string>
    <string name="text_status_ok">승인됨</string>
    <string name="text_status_wait">대기중</string>
    <string name="text_status_refuse">거부됨</string>

    <string name="hint_id">아이디</string>
    <string name="hint_email">이메일</string>
    <string name="hint_pw">비밀번호</string>
    <string name="hint_search_song">제목 입력</string>
    <string name="hint_search_song_desc">제목을 입력하여 검색</string>

    <string name="error_empty_id">이메일를 입력해주세요</string>
    <string name="error_empty_pw">비밀번호를 입력해주세요</string>
    <string name="error_quota">검색 한도 초과</string>
    <string name="error_quota_desc">오늘의 검색 한도를 초과하였습니다</string>

    <string name="empty_search">검색결과 없음</string>
    <string name="empty_search_song">검색 된 음악이 없습니다</string>

    <string name="menu_song">기상송</string>
    <string name="menu_location_apply">랩실 신청/체크</string>
    <string name="menu_profile">내 정보</string>
    <string name="menu_offbase">외출/외박 신청</string>
    <string name="menu_bus_apply">셔틀 버스</string>
    <string name="menu_lost_found">분실물</string>
    <string name="menu_counsel_apply">상담 신청</string>
    <string name="menu_location_check">위치 확인</string>

    <string name="desc_select_place">에 있을 장소를 선택해 주세요!</string>
    <string name="desc_offbase_apply">신청하고 싶은 날짜와 시간, 사유를 작성해 주세요</string>
    <string name="desc_drawer_open">열기</string>
    <string name="desc_drawer_close">닫기</string>

    <string name="b1nd" translatable="false">B1ND</string>
    <string name="warn_delete_sure">삭제하시겠습니까?</string>
    <string name="warning">주의</string>

    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>
    <string name="splash_subtitle">[부사] 어린아이가 탈 없이 잘 놀며 자라는 모양</string>
    <string name="ask_donthave_id">계정이 없으신가요?</string>
    <string name="do_signup">가입하기</string>
    <string name="hint_pw_check">비밀번호 확인</string>
    <string name="next">다음</string>
    <string name="hint_name">이름</string>
    <string name="hint_phone">휴대폰 번호 (- 제외)</string>
    <string name="hint_grade">학년</string>
    <string name="hint_class">반</string>
    <string name="hint_number">번호</string>
    <string name="hint_status_message">상태 메시지</string>
    <string name="empty_location_student_subtitle">신청한 학생이 없거나 네트워크 상태를 확인해주세요</string>
    <string name="empty_location_student_title">학생을 찾을 수 없습니다.</string>
</resources>
