<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/empty_search"
            app:layout_constraintBottom_toTopOf="@+id/textTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/ic_error" />

        <TextView
            android:id="@+id/textTitle"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/error_quota"
            app:layout_constraintBottom_toTopOf="@+id/textDetail"
            app:layout_constraintEnd_toEndOf="@+id/image_logo"
            app:layout_constraintStart_toStartOf="@+id/image_logo"
            app:layout_constraintTop_toBottomOf="@+id/image_logo" />

        <TextView
            android:id="@+id/textDetail"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_quota_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textTitle"
            app:layout_constraintStart_toStartOf="@+id/textTitle"
            app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>