<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.offbase.OffbaseApplyActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <include
            android:id="@+id/appbar_layout"
            layout="@layout/app_bar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/root_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="88dp">

            <TextView
                android:id="@+id/text_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/nanum_square_regular"
                android:text="@string/desc_offbase_apply"
                android:textColor="@color/textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.35"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_desc">

                <LinearLayout
                    android:id="@+id/layout_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:ems="4"
                        android:fontFamily="@font/nanum_square_regular"
                        android:text="@string/text_offbase_leave_date"
                        android:textAlignment="center"
                        android:textColor="@color/colorControlNormal"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_date"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_date_end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_date_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:ems="4"
                        android:fontFamily="@font/nanum_square_regular"
                        android:text="@string/text_offbase_leave_date_end"
                        android:textAlignment="center"
                        android:textColor="@color/colorControlNormal"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_date_end"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_date_end"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:ems="4"
                        android:fontFamily="@font/nanum_square_regular"
                        android:text="@string/text_offbase_leave_time"
                        android:textAlignment="center"
                        android:textColor="@color/colorControlNormal"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_time_hour"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="6dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_time_hour"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="4" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/text_hour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nanum_square_regular"
                        android:text="@string/text_hour"
                        android:textColor="@color/colorControlNormal"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_time_minute"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginEnd="6dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_time_minute"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="4" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/text_minute"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nanum_square_regular"
                        android:text="@string/text_minute"
                        android:textColor="@color/colorControlNormal"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_time_end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_time_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:ems="4"
                        android:fontFamily="@font/nanum_square_regular"
                        android:text="@string/text_offbase_time_end"
                        android:textAlignment="center"
                        android:textColor="@color/colorControlNormal"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_time_hour_end"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="6dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_time_hour_end"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="4" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/text_hour_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nanum_square_regular"
                        android:text="@string/text_hour"
                        android:textColor="@color/colorControlNormal"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_time_minute_end"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginEnd="6dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_time_minute_end"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="4" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/text_minute_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nanum_square_regular"
                        android:text="@string/text_minute"
                        android:textColor="@color/colorControlNormal"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_cause"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_reason"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:ems="4"
                        android:fontFamily="@font/nanum_square_regular"
                        android:text="@string/text_offbase_reason"
                        android:textAlignment="center"
                        android:textColor="@color/colorControlNormal"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_reason"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_reason"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine"
                            android:ems="10" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/text_apply"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
